# mongodb-example

./: mongodb-example.cabal
src/: Main.hs
