name:                mongodb-example
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/steshaw/mongodb-example#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Shaw
maintainer:          steven@steshaw.org
copyright:           (c) 2016, Steven Shaw
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mongodb-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mongoDB
                     , mtl
